[gd_scene load_steps=8 format=3 uid="uid://bdvohluudbabh"]

[ext_resource type="Script" uid="uid://cyiyvno6qa01q" path="res://Scripts/main_ui.gd" id="1_gmh8u"]
[ext_resource type="Texture2D" uid="uid://df6g5avlwsbq2" path="res://Assets/Icon's/Dark Chocolate Stake.png" id="2_dcbcb"]
[ext_resource type="Texture2D" uid="uid://c5fklb6a4b10a" path="res://Assets/Icon's/Silver_Spoon_Bowl.png" id="3_tbbry"]
[ext_resource type="Texture2D" uid="uid://v4ijrb15mok1" path="res://Assets/Icon's/Dark Chocolate Stake (2).png" id="3_ylo01"]
[ext_resource type="Texture2D" uid="uid://b5jyxl72fc1dj" path="res://Assets/Icon's/Holy Milk.png" id="4_7okpu"]
[ext_resource type="Texture2D" uid="uid://207johi0lnaa" path="res://Assets/Icon's/Silver_Spoon_Bowl (2).png" id="5_bhqku"]
[ext_resource type="Texture2D" uid="uid://ctxsvs6g6ucj4" path="res://Assets/Icon's/Holy Milk (2).png" id="7_ylo01"]

[node name="main_ui" type="CanvasLayer"]
script = ExtResource("1_gmh8u")

[node name="weapon_select_panel" type="Panel" parent="."]
offset_left = 35.0
offset_top = 44.0
offset_right = 1101.0
offset_bottom = 592.0
tooltip_text = "ggddf"

[node name="weapon_button_1" type="TextureButton" parent="weapon_select_panel"]
layout_mode = 0
offset_left = 37.0
offset_top = 116.0
offset_right = 357.0
offset_bottom = 436.0
texture_normal = ExtResource("2_dcbcb")
texture_hover = ExtResource("3_ylo01")

[node name="weapon_button_2" type="TextureButton" parent="weapon_select_panel"]
layout_mode = 0
offset_left = 365.0
offset_top = 116.0
offset_right = 685.0
offset_bottom = 436.0
texture_normal = ExtResource("3_tbbry")
texture_hover = ExtResource("5_bhqku")

[node name="weapon_button_3" type="TextureButton" parent="weapon_select_panel"]
layout_mode = 0
offset_left = 693.0
offset_top = 116.0
offset_right = 1013.0
offset_bottom = 436.0
texture_normal = ExtResource("4_7okpu")
texture_hover = ExtResource("7_ylo01")

[connection signal="pressed" from="weapon_select_panel/weapon_button_1" to="." method="_on_weapon_button_1_pressed"]
[connection signal="pressed" from="weapon_select_panel/weapon_button_2" to="." method="_on_weapon_button_2_pressed"]
[connection signal="pressed" from="weapon_select_panel/weapon_button_3" to="." method="_on_weapon_button_3_pressed"]
